--- a/packages/react-todo/index.html
+++ b/packages/react-todo/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script>
+      const global = globalThis
+    </script>
     <title>Todo App - FWD</title>
   </head>
   <body class="bg-gray-200">
