feat: photo upload via cloudinary

--- a/packages/react-todo/index.html
+++ b/packages/react-todo/index.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script>
       const global = globalThis
+      
     </script>
+       <script
+       src="https://widget.cloudinary.com/v2.0/global/all.js"
+       type="text/javascript"
+     ></script>
     <title>Todo App - FWD</title>
   </head>
   <body class="bg-gray-200">
